--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.3",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "typescript": "^5"
   }
 }
